Fixed the text overflow on mobile

--- a/nav.css
+++ b/nav.css
@@ -109,7 +109,7 @@
 
     .navigationBar{
         width: 100%;
-        padding: 10px 0;
+        padding: 0;
 
         display: flex;
         justify-content: flex-start;
